# point_simulation

./: Cargo.toml  README.md  makefile  rustfmt.toml  shell.nix  thing.html
src/: compute.wgsl  lib.rs  main.rs  prng.rs  shader.wgsl  vertex.rs
