[package]
name = "point_simulation"
version = "0.1.0"
edition = "2021"
default-run = "point_simulation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"], default-features = false }
pollster = { version = "0.3.0", default-features = false }

wgpu = { version = "0.16.0" }#, features = ["wgsl"], default-features = false }
#wgpu = { version = "0.18.0", features = ["wgsl"], default-features = false }
winit = { version = "0.28.6", features = ["x11"], default-features = false }
#winit = { version = "0.29.3", features = ["x11"], default-features = false }

env_logger = { version = "0.10.0" }

cfg-if = "1.0.0"
log = "0.4.19"
#naga = "0.12.2"
nohash = "0.2.0"

[rust]
debuginfo-level = 1

[features]
simd = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
]}
